--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
+    "sharp": "^0.21.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
