:alembic: added markdown toc generator

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vue/cli-service": "^3.1.4",
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
+    "casex": "^3.0.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "husky": "^1.1.4",
