--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "color": "^3.1.0",
     "dayjs": "^1.7.7",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
