--- a/package.json
+++ b/package.json
@@ -23,31 +23,31 @@
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "color": "^3.1.0",
-    "dayjs": "^1.7.7",
+    "dayjs": "^1.7.8",
     "register-service-worker": "^1.0.0",
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
+    "vue": "^2.5.21",
+    "vue-router": "^3.0.2",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-plugin-pwa": "^3.1.2",
-    "@vue/cli-service": "^3.1.4",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-pwa": "^3.3.0",
+    "@vue/cli-service": "^3.3.0",
     "@vue/eslint-config-prettier": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "casex": "^3.0.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
-    "husky": "^1.1.4",
-    "lint-staged": "^8.0.5",
-    "node-sass": "^4.9.0",
-    "prettier": "^1.15.2",
+    "eslint": "^5.12.0",
+    "eslint-plugin-vue": "^5.1.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "node-sass": "^4.11.0",
+    "prettier": "^1.15.3",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.0.1",
-    "sharp": "^0.21.0",
-    "vue-template-compiler": "^2.5.17"
+    "sharp": "^0.21.1",
+    "vue-template-compiler": "^2.5.21"
   }
 }
