:bug: Fix asset 404s

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,11 +7,16 @@ server {
   #charset koi8-r;
   #access_log  /var/log/nginx/host.access.log  main;
   
-  location /service-worker.js {
+  location /(service-worker.js|index.html) {
     add_header Cache-Control no-cache;
     root   /usr/share/nginx/html;
   }
-
+  
+  location ~* \.(js|css|png|jpg|jpeg|gif)$ {
+    root   /usr/share/nginx/html;
+    try_files $uri =404;
+  }
+  
   location / {
     root   /usr/share/nginx/html;
     try_files $uri $uri/ /index.html;
