--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
   #charset koi8-r;
   #access_log  /var/log/nginx/host.access.log  main;
   
-  location /(service-worker.js|index.html) {
+  location ~* /(service-worker.js|index.html) {
     add_header Cache-Control no-cache;
     root   /usr/share/nginx/html;
   }
