--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-frontend",
-  "version": "1.5.0",
+  "version": "2.0.0-beta.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
